# Helm

./: .gitignore  README.md
client/: engine-bridge.js  main.js  package-lock.json  package.json  preload-overlay.js  preload.js
client/renderer/: index.html  overlay.html  overlay.js  renderer.js  styles.css
docs/: remote_desktop_architecture.html
sender/: CMakeLists.txt
sender/src/: main.cpp
sender/src/capture/: WgcCapture.cpp  WgcCapture.h
sender/src/common/: Common.h  WicPng.h
sender/src/encode/: JpegEncoder.h  MfEncoder.cpp
sender/src/input/: InputInjector.cpp
sender/src/process/: ColorConverter.cpp  ColorConverter.h
sender/src/process/shaders/: BgraToNv12.hlsl
sender/src/transport/: PipeServer.cpp  PipeServer.h  Protocol.h  TcpServer.cpp  TcpServer.h
